fix tile background image alignment

--- a/src/tags/tile/styles.sass
+++ b/src/tags/tile/styles.sass
@@ -9,11 +9,11 @@
   justify-content: center
   background: url('../../images/tiles/Front.png') no-repeat
   background-size: contain
+  background-position: center
   box-shadow: 5px #ccc
 
   &--back
-    background: url('../../images/tiles/Back.png') no-repeat
-    background-size: contain
+    background-image: url('../../images/tiles/Back.png')
 
   &__img
     height: 60px
